2008-07-13  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogltexture.c: 
	* clutter/extconf.rb: 
	* clutter/rbclutter.c: Add wrappers for the Cogl texture API.

	* extra/mkcoglconsts.rb: Only include constants that are defined
	to a GL_* value with the same name to avoid including #ifdef'd out
	constants.

	* clutter/rbcoglconsts.c: Remove duplicates and add some missing
	constants.

2008-07-11  Neil Roberts  <neil@o-hand.com>

	* clutter/extconf.rb: Increase the required Clutter version to 0.8

2008-07-11  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogl.c: Fix included headers

2008-07-10  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogl.c: Added wrappers for miscellaneous Cogl
	functions

	* extra/mkcoglconsts.rb: Added a helper script to generate
	rbcoglconsts.c

	* clutter/rbcoglconsts.c: Added an automatically generated file to
	define the constants for Cogl

	* clutter/extconf.rb: Added rbcogl.o and rbcoglconsts.o

	* clutter/rbclutter.c (Init_clutter): Added a call to rb_cogl_init

	* clutter/rbclutter.h: Added a declaration for rbclt_c_cogl

2008-07-05  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Update to new layout API

2008-07-04  Neil Roberts  <neil@o-hand.com>

	* examples/test-shader.rb: Added the edge-detect filter from
	test-shader.c

2008-07-04  Neil Roberts  <neil@o-hand.com>

	* examples/test-shader.rb: Use sampler2D instead of sampler2DRect
	now that Clutter has removed support for the ARB_texture_rectangle
	extension.

2008-06-03  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltstagemanager.h: 
	* clutter/rbcltstagemanager.c: Added a wrapper for
	ClutterStageManager. A global variable is used to keep track of
	the default stage manager so that all of the stages can be marked

	* clutter/rbcltmain.c (rbclt_init): Added a call to
	rbclt_stage_manager_init.

	* clutter/extconf.rb: Added rbcltstagemanager.o

	* clutter/rbclutter.c (Init_clutter): Added a call to
	rbclt_stage_manager_init.
